Referenced/Nintex DocGen/objects/Form_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advanced_Conditions__c</fullName>
        <label>Advanced Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DDP__c</fullName>
        <label>Document Package</label>
        <referenceTo>DDP__c</referenceTo>
        <relationshipLabel>Form Rules</relationshipLabel>
        <relationshipName>Form_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Form Rule</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Form Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>